add_library(plugin_singleton_impl_one SHARED plugin_impl_one.cpp plugin_impl_one.hpp)
target_compile_definitions(plugin_singleton_impl_one PRIVATE LIBRARY_EXPORT)

add_library(plugin_singleton_impl_two SHARED plugin_impl_two.cpp plugin_impl_two.hpp)
target_compile_definitions(plugin_singleton_impl_two PRIVATE LIBRARY_EXPORT)

add_executable(plugin_singelton plugin_client.cpp)